# myrpc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  codelldb  idl.pb.c  idl.pb.cc  idl.pb.cpp  idl.pb.h  idl.pb.hpp  idl.proto  readme.md  test.md  work.md
aaa/: erpc_simple_server.cpp
doc/: Android.md  a.plantuml  port.md  qaq.plantuml  theme.plantuml  整体结构.md
erpc_c/: CMakeLists.txt  Makefile
erpc_c/infra/: client_server_common.cpp  erpc_client_server_common.hpp  erpc_common.h  erpc_framed_transport.cpp  erpc_status.h  erpc_transport.hpp
erpc_c/port/: erpc_config_internal.h  erpc_port_stdlib.cpp  (+1 more)
erpcgen/: Makefile
example/: Doxygen.config  Makefile  Makefile.old  client  client.cpp  erpc_matrix_multiply.h  erpc_matrix_multiply_client.cpp  erpc_matrix_multiply_server.cpp  erpc_matrix_multiply_server.h  grpc.pb.c  grpc.pb.h  idl.erpc  idl.pb.c  idl.pb.cpp  idl.pb.h  idl.pb.hpp  idl.proto  qaq.sh  server  server.cpp  simple  simpleclient  tempCodeRunnerFile.sh
include/: rpc_base.hpp  rpc_status.h  rpc_status.hpp
infra/: client_server_common.cpp  erpc_client_server_common.hpp  erpc_version.h  infra.dox  rpc_base.hpp  rpc_status.cpp  rpc_status.h
mk/: common.mk  erpc_common.mk  flags.mk  paths.mk  subdirs.mk  targets.mk
port/: erpc_config_internal.h  erpc_port_freertos.cpp  erpc_threading.h  erpc_threading_espidf.cpp  erpc_threading_pthreads.cpp
test/: code  code.c  qaq.sh  test  test.c
uml/: colors.puml  core.puml  output.hpp  qaq.regx  regx.py  serialization.plantuml  server.plantuml  skinparam.puml  stub.puml  total.plantuml  transport.puml
(+144 files in other folders)
